<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="screen_off_fingerprint_title">Screen off fingerprint</string>
    <string name="screen_off_fingerprint_summary">Long press on fingerprint sensor to unlock phone when screen is off</string>
    <string name="touch_feedback_enable">Enable touch feedback</string>
    <string name="face_unlock_vibration_title">Face unlock vibration</string>
    <string name="fingerprint_unlock_vibration_title">Fingerprint unlock vibration</string>
    <string name="back_gesture_vibration_title">Back gesture haptic</string>
    <string name="off_screen_gesture_vibration_title">Off-screen gesture haptic</string>
    <string name="qs_tiles_vibration_title">QS Tiles haptic</string>
    <string name="slider_vibration_title">Slider haptic</string>
    <string name="switch_vibration_title">Switch haptic</string>
    <string name="misc_scenes_vibration_title">Misc scenes haptic</string>
    <string name="vibration_strength_category">Vibration strength</string>
    <string name="alarm_call_strength_title">Alarm &amp; Call strength</string>
    <string name="haptic_strength_title">Haptic strength</string>
    <string name="notification_strength_title">Notification strength</string>
    <string name="vibration_strength_softer">Softer</string>
    <string name="vibration_strength_stronger">Stronger</string>
    <string name="always_enable_keyboard_haptic_title">Always enable for keyboard apps</string>
    <string name="always_enable_keyboard_haptic_summary">Make keyboard apps haptic feedback independent of touch feedback switch</string>
    <string name="vibration_pattern_category">Vibration pattern</string>
    <string name="vibration_pattern_notification_title">Notification pattern</string>
    <string name="vibration_pattern_ringtone_title">Ringtone pattern</string>
    <string name="vibration_effect_category">Vibration effect</string>
    <string name="haptic_style_title">Haptic style</string>
    <string name="haptic_style_unknown">Unknown</string>
    <string name="keyboard_press_effect_title">Mechanical keyboard press effect</string>
    <string name="keyboard_press_effect_summary">Simulate effect of pressing on a mechanical keyboard when typing</string>
    <string name="keyboard_press_effect_warning">This will invalidate vibration strength settings from keyboard apps</string>
    <string name="battery_saver_vibration_title">Turn off vibration</string>
    <string name="battery_saver_vibration_summary">Disable vibration to save power when Battery Saver is on</string>
    <string name="per_app_config_empty_text">No installed apps support current settings</string>
    <string name="per_app_config_no_result_text">No apps found matching \"%1$s\"</string>
    <string name="per_app_config_search">Search apps</string>
    <string name="per_app_config_select_all">Select all</string>
    <string name="per_app_config_deselect_all">Deselect all</string>
    <string name="per_app_config_reset">Reset</string>
    <string name="per_app_config_reset_success">Reset success</string>
    <string name="per_app_refresh_rate_title">Per-app refresh rate config</string>
    <string name="per_app_refresh_rate_summary">Configure refresh rate individually for each apps</string>
    <string name="per_app_refresh_rate_default">Follow system</string>
    <string name="screen_refresh_rate_title">Screen refresh rate</string>
    <string name="min_refresh_rate_title">Minimum refresh rate</string>
    <string name="max_refresh_rate_title">Maximum refresh rate</string>
    <string name="network_traffic_state_title">Network speed</string>
    <string name="network_traffic_state_enable">Show network speed</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_autohide_threshold_title">Auto-hide threshold</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>
    <string name="unit_second">sec</string>
    <string name="screenshot_gestures_title">Screenshot gestures</string>
    <string name="click_partial_screenshot_title">Click to partial screenshot</string>
    <string name="click_partial_screenshot_summary">Short click Volume Down and Power to take partial screenshot</string>
    <string name="three_finger_hold_screenshot_title">Hold to partial screenshot</string>
    <string name="three_finger_hold_screenshot_summary">Hold with three fingers on screen for 1s to take partial screenshot</string>
    <string name="three_finger_swipe_screenshot_title">Swipe to full screenshot</string>
    <string name="three_finger_swipe_screenshot_summary">Swipe down with three fingers on screen to take full screenshot</string>
    <string name="status_bar_clock_date_title">Clock and Date</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_date_title">Date settings</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_position">Date position</string>
    <string name="status_bar_clock_auto_hide_title">Auto-hide clock</string>
    <string name="status_bar_clock_auto_hide_summary">Hide and show clock at regular intervals of time</string>
    <string name="status_bar_clock_auto_hide_hdur_title">Hide duration</string>
    <string name="status_bar_clock_auto_hide_sdur_title">Show duration</string>
    <string name="heads_up_notifications_title">Heads up</string>
    <string name="heads_up_notifications_enable">Enable heads up</string>
    <string name="less_boring_heads_up_title">Less annoying heads up</string>
    <string name="less_boring_heads_up_summary">Show heads up only for dialer &amp; messaging apps</string>
    <string name="heads_up_disable_in_landscape_title">Disable in landscape</string>
    <string name="heads_up_disable_in_landscape_summary">Show heads up only for dialer &amp; messaging apps in landscape mode</string>
    <string name="heads_up_blacklist_title">Blacklist apps</string>
    <string name="heads_up_blacklist_summary">Disable selected apps from showing heads up</string>
    <string name="heads_up_stoplist_title">Stoplist apps</string>
    <string name="heads_up_stoplist_summary">Show heads up only for dialer &amp; messaging apps when using selected apps</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_show_brightness_title">Where to show</string>
    <string name="qs_show_auto_brightness_button_title">Auto brightness button</string>
    <string name="qs_show_auto_brightness_button_summary">Show auto brightness button next to the brightness slider</string>
    <string name="qs_brightness_slider_bottom_title">Move to bottom</string>
    <string name="qs_brightness_slider_bottom_summary">Show brightness slider in the bottom of QS panel</string>
    <string name="game_mode_preference_title">Game mode</string>
    <string name="game_mode_intro_text">Get more immersive experience in games</string>
    <string name="game_mode_manage_apps_title">Manage games</string>
    <string name="game_mode_manage_apps_summary">Manage apps that need to enable game mode</string>
    <string name="game_mode_in_game_options">In-Game options</string>
    <string name="game_mode_disable_auto_brightness">Disable auto brightness</string>
    <string name="game_mode_disable_three_finger_gestures">Disable three-finger gestures</string>
    <string name="game_mode_disable_heads_up">Disable heads-up notification</string>
    <string name="game_mode_suppress_fullscreen_title">Block fullscreen events</string>
    <string name="game_mode_suppress_fullscreen_summary">Prevent fullscreen events like incoming call from appearing</string>
    <string name="game_mode_silent_notification_title">Silent notifcations</string>
    <string name="game_mode_silent_notification_summary">Don\'t play sound and vibration for notifications</string>
    <string name="game_mode_prevent_mistouch_options">Prevent mistouch options</string>
    <string name="game_mode_lock_gestures_title">Lock fullscreen gestures</string>
    <string name="game_mode_lock_gestures_summary">Require double swipe to unlock gestures in fullscreen games</string>
    <string name="game_mode_lock_statusbar_title">Lock status bar</string>
    <string name="game_mode_lock_statusbar_summary">To enable status bar, swipe from screen left/right side</string>
    <string name="pop_up_view_title">Pop-Up View</string>
    <string name="pop_up_view_info">Run app in a floating mini window to do more quick actions</string>
    <string name="pop_up_view_gesture_title">Gesture</string>
    <string name="pop_up_view_global_gesture_title">Global Gesture</string>
    <string name="pop_up_view_global_gesture_summary">Open any apps with Pop-Up View by swiping from bottom corner of the screen to middle</string>
    <string name="pop_up_view_manage_apps_title">Manage pinned apps</string>
    <string name="pop_up_view_manage_apps_summary">Customize apps to be shown in menu</string>
    <string name="pop_up_view_more_circles_title">Display more apps</string>
    <string name="pop_up_view_more_circles_summary">Add more quarter circles in gesture menu</string>
    <string name="pop_up_view_global_gesture_warn">Digital assistant gesture will be disabled with Global Gesture enabled.</string>
    <string name="pop_up_view_mini_window_title">Mini-Window</string>
    <string name="pop_up_view_keep_mute_mini_title">Keep muted state</string>
    <string name="pop_up_view_keep_mute_mini_summary_on">App will keep muted when switched from Pinned-Window mode to Mini-Window mode</string>
    <string name="pop_up_view_keep_mute_mini_summary_off">App will unmute when switched from Pinned-Window mode to Mini-Window mode</string>
    <string name="pop_up_view_non_window_area_title">Non-Window area</string>
    <string name="pop_up_view_single_tap_non_window_title">Single tap action</string>
    <string name="pop_up_view_double_tap_non_window_title">Double tap action</string>
    <string name="pop_up_view_light_weight_open_title">LightWeight open</string>
    <string name="pop_up_view_light_weight_notificiation_portrait_title">Open notifications (Portrait)</string>
    <string name="pop_up_view_light_weight_notificiation_portrait_summary">Use Pop-Up View to jump to notification apps in portrait mode</string>
    <string name="pop_up_view_light_weight_notificiation_landscape_title">Open notifications (Landscape)</string>
    <string name="pop_up_view_light_weight_notificiation_landscape_summary">Use Pop-Up View to jump to notification apps in landscape mode</string>
    <string name="pop_up_view_light_weight_notificiation_blacklist_title">Notification blacklist apps</string>
    <string name="pop_up_view_light_weight_notificiation_blacklist_summary">Disallow selected apps from opening notification in Pop-Up View</string>
    <string name="status_bar_notification_ticker_title">Notification ticker</string>
    <string name="status_bar_notification_ticker_summary">Show notification content on status bar when heads up notification is not available</string>
    <string name="status_bar_notification_ticker_enable_title">Enable notification ticker</string>
    <string name="status_bar_notification_ticker_blacklist_title">Blacklist apps</string>
    <string name="status_bar_notification_ticker_blacklist_summary">Disable selected apps from showing notification ticker</string>
</resources>