<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023-2024 The Nameless-AOSP Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android.title="@string/heads_up_notifications_title">

    <org.nameless.settings.preference.GlobalSettingMainSwitchPreference
        android:key="heads_up_notifications_enabled"
        android:title="@string/heads_up_notifications_enable"
        android:defaultValue="true" />

    <org.nameless.custom.preference.SystemSettingSwitchPreference
        android:key="less_boring_heads_up"
        android:title="@string/less_boring_heads_up_title"
        android:summary="@string/less_boring_heads_up_summary"
        android:defaultValue="false" />

    <org.nameless.custom.preference.SystemSettingSwitchPreference
        android:key="disable_landscape_heads_up"
        android:title="@string/heads_up_disable_in_landscape_title"
        android:summary="@string/heads_up_disable_in_landscape_summary"
        android:defaultValue="false" />

    <org.nameless.custom.preference.SystemSettingListPreference
        android:key="heads_up_timeout"
        android:title="@string/heads_up_time_out_title"
        android:entries="@array/heads_up_time_out_entries"
        android:entryValues="@array/heads_up_time_out_values"
        android:defaultValue="5000" />

    <org.nameless.custom.preference.SystemSettingListPreference
        android:key="heads_up_notification_snooze"
        android:title="@string/heads_up_snooze_title"
        android:entries="@array/heads_up_snooze_entries"
        android:entryValues="@array/heads_up_snooze_values"
        android:defaultValue="60000" />

    <Preference
        android:key="heads_up_blacklist"
        android:title="@string/heads_up_blacklist_title"
        android:summary="@string/heads_up_blacklist_summary"
        android:fragment="org.nameless.settings.notification.HeadsUpBlacklistSettingsFragment" />

    <Preference
        android:key="heads_up_stoplist"
        android:title="@string/heads_up_stoplist_title"
        android:summary="@string/heads_up_stoplist_summary"
        android:fragment="org.nameless.settings.notification.HeadsUpStoplistSettingsFragment" />
</PreferenceScreen>
